2001-02-26  Luigi Bianchi <lbianchi@yorku.ca>

	* README: added an installation procedure for Windows

2000-09-12  Jason Rennie <jrennie@ai.mit.edu>

	* QueryData.pm (list_all_words): new function
	* test.pl: add test for list_all_words

2000-05-04  Jason Rennie <jrennie@ai.mit.edu>

	* QueryData.pm (_initialize, query): explicitly set value of input
	record separator; restore old value before returning

2000-03-31  Eric Joanis <joanis@cs.toronto.edu>

	* QueryData.pm (%relation_sym): '#' is holonym symbol, '%' is
	meronym symbol.  Previously had this backwards.

2000-03-28  Eric Joanis <joanis@cs.toronto.edu>

	* QueryData.pm (%relation_sym): don't escape dollar-sign
	* QueryData.pm (get_all_words): fix problems with "new to(p)"
	by removing "(p)"

2000-03-22  Jason Rennie <jrennie@ai.mit.edu>

	* QueryData.pm (offset): new function
	* test.pl: add test for offset

2000-03-21  Jason Rennie <jrennie@ai.mit.edu>

	* QueryData.pm (get_pointers, get_all_words): fix minor bug in
	data file parsing

2000-03-10  Jason Rennie <jrennie@ai.mit.edu>

	* test.pl: Test for new glos code

2000-03-10  John Matiasek <john@ai.univie.ac.at>

	* QueryData.pm: Allow access to glossary definitions (glos)

2000-02-22  Jason Rennie <jrennie@ai.mit.edu>

	* QueryData.pm: Rewrite documentation; disallow long relation names
	* QueryData.pm (query): use single regex (like valid_forms);
	clean up code a bit
	* QueryData.pm (level): new function

2000-02-02  Keith J. Miller  <keith@mitre.org>

	* QueryData.pm (forms): make consistent with query syntax;
	don't return immediately if we find a morph exclusion entry
	* QueryData.pm (valid_forms): new function
	* test.pl: make tests consistent with changes, add checks for
	new function

1999-10-22  Jason Rennie  <jrennie@ai.mit.edu>

	* QueryData.pm: update documentation to look a bit nicer

1999-09-15  Jason Rennie  <jrennie@ai.mit.edu>

	* README: make specific to QueryData
	* README: rewrite to correspond to Query